Added some ui for card and pokemon
