# SwiftUIApi/SwiftUIApi/NetworkModule/Sources/NetworkModule/Models/CardItem.swift
@@ -1,0 +1,20 @@
+//
+// CardItem.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+
+public struct CardItem: Codable {
+
+
+    public var card: Card?
+
+    public init(card: Card?) {
+        self.card = card
+    }
+
+}
